objects/Renewal__c.object
<CustomObject>
    <fields>
        <fullName>ACV_converted_Currency__c</fullName>
        <label>ACV (converted) Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_converted__c</fullName>
        <label>ACV (converted)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE</label>
        <referenceTo>AE__c</referenceTo>
        <relationshipLabel>Renewals</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Health__c</fullName>
        <label>Account Health</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Renewals</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expansion_ACV_Currency__c</fullName>
        <label>Expansion ACV Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expansion_ACV__c</fullName>
        <label>Expansion ACV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_ACV_Currency__c</fullName>
        <label>Incremental ACV Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incremental_ACV__c</fullName>
        <label>Incremental ACV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Contact__c</fullName>
        <label>Next Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_ACV_Currency__c</fullName>
        <label>Renewal ACV Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_ACV__c</fullName>
        <label>Renewal ACV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Due_Date__c</fullName>
        <label>Renewal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewals_Manager__c</fullName>
        <label>Renewals Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>$Label.CopadoDomain &amp; &quot;/lightning/r/Opportunity/&quot; &amp;  Opportunity_ID__c &amp; &quot;/view&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uplift_Currency__c</fullName>
        <label>Uplift Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <label>Uplift</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Days_Until_Close__c</fullName>
        <label># of Days Until Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Renewal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Renewal_Due_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Uplift__c</columns>
        <columns>Expansion_ACV__c</columns>
        <columns>Incremental_ACV__c</columns>
        <columns>Renewal_ACV__c</columns>
        <columns>Stage__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>AE__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Renewal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>